kubernetes/applications/monitoring/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      # https://github.com/grafana/grafana/issues/100779
      securityContext:
        runAsUser: 0
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:12.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: "/var/lib/grafana"
              name: grafana-volume-mount
      volumes:
        - name: grafana-volume-mount
          persistentVolumeClaim:
            claimName: grafana-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  routes:
    - kind: Rule
      match: Host(`grafana.riichi.me`)
      priority: 10
      services:
        - name: grafana
          port: 80
